# AiChatBot

./: .env.example  .gitignore  Dockerfile  README.md  RUN_GUIDE.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  documents.py  exams.py  matrices.py  users.py
app/core/: config.py  exceptions.py  security.py
app/crud/: __init__.py
app/db/mongodb/: session.py
app/db/postgresql/: base.py  session.py
app/db/redis/: __init__.py  session.py
app/models/sql/: user.py
app/repositories/sql/: user_repository.py
app/schemas/: auth.py  common.py
app/services/: auth_service.py  email_service.py
app/utils/: email_sender.py
docs/: setup-guide.md
migrations/: env.py
migrations/versions/: 8fe5fcde88b9_add_email_verification_fields.py  b06b1a72008c_create_users_table.py
tests/unit/: test_login.py  test_register_verification.py  test_resend_verification.py  test_reset_password.py  test_verify_email.py  test_verify_otp.py
