[project]
name = "exam-generator-backend"
version = "0.1.0"
description = "AI-powered exam generation system for teachers"
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database - PostgreSQL
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Database - MongoDB
    "motor>=3.5.0",
    "beanie>=1.26.0",
    # Database - Redis
    "redis>=5.0.0",
    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.2.0",
    # AI Integration
    "google-generativeai>=0.7.0",
    "openai>=1.35.0",
    # File Processing
    "python-multipart>=0.0.9",
    "pypdf2>=3.0.0",
    "python-docx>=1.1.0",
    # Export
    "reportlab>=4.2.0",
    "weasyprint>=62.0",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Utilities
    "httpx>=0.27.0",
    "python-slugify>=8.0.0",
    "aioodbc>=0.5.0",
    "pyodbc>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.uv.workspace]
members = [
    "my_fastapi_project",
]
